--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Garden State Frogs</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -152,7 +151,7 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/benedicta.jpg"alt="">
             <div class="portfolio-caption">
-              <h4>Ranitomeya Benedicta</h4>
+              <h4>R. Benedicta Shucushuyacu</h4>
               <p class="text-muted">Bloodline</p>
             </div>
           </div>
