--- a/index.html
+++ b/index.html
@@ -233,25 +233,25 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" novalidate>
+            <form id="contactForm" name="sentMessage" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfc-z5c_6vkFtIMZi2bAjSmnMQ2gFDxQIQriv_K-MK3gS0O1g/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                    <input class="form-control" id="entry.957290450" name="entry.957290450" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                    <input class="form-control" id="entry.1122234000" name="entry.1122234000" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" id="entry.200306772" name="entry.200306772" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
+                    <textarea class="form-control" id="entry.1984639159" name="entry.1984639159" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
@@ -259,6 +259,12 @@
                 <div class="col-lg-12 text-center">
                   <div id="success"></div>
                   <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                </div>
+                <br>
+                <div class="col-lg-12 text-center" style="visibility: hidden; color: white">
+                  <p id="submitted">
+                    Message Submitted
+                  </p>
                 </div>
               </div>
             </form>
@@ -308,10 +314,17 @@
 
     <!-- Contact form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script type="text/javascript">var submitted=false;</script>
+    <script type="text/javascript">
+    $('#contactForm').on('submit', function(e) {
+      $("#contactForm")[0].reset();
+      document.getElementById("submitted").style.visibility = 'visible';
+      });
+    </script>
 
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
+
 
   </body>
 
