add new frogs, change background, update index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="intro-text">
           <div class="intro-lead-in">Welcome to</div>
           <div class="intro-heading text-uppercase">Garden State Frogs</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn More</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about" style="margin:10%">Learn More</a>
         </div>
       </div>
     </header>
@@ -130,7 +130,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Our Frogs</h2>
-            <h3 class="section-subheading text-muted">Some of the many species we breed and sell</h3>
+            <h3 class="section-subheading text-muted">Some of the many morphs we breed and sell</h3>
           </div>
         </div>
         <div class="row">
@@ -138,84 +138,105 @@
             <img class="img-fluid" src="img/portfolio/caynarachi.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Caynarachi Fantastica</h4>
-              <p class="text-muted">Understory Enterprises</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/highland_sirensis.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Highland Sirensis</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">EU Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/benedicta.jpg"alt="">
             <div class="portfolio-caption">
               <h4>R. Benedicta Shucushuyacu</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/nominal_fantastica.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Nominal Fantastica</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/vanzolini.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Ranitomeya Vanzolini</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">EU Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/southern_variabilis.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Southern Variabilis</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/arena_blanca.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Arena Blanca</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/reticulated_fantastica.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Reticulated Fantastica</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/goldleg.jpg"alt="">
             <div class="portfolio-caption">
               <h4>R. Uakarii 'Gold Leg'</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/lowland_fantastica.jpg"alt="">
             <div class="portfolio-caption">
               <h4>Lowland Fantastica</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <img class="img-fluid" src="img/portfolio/baja_halluaga.jpg"alt="">
+            <div class="portfolio-caption">
+              <h4>R. Imitator 'Baja Halluaga'</h4>
+              <p class="text-muted">Understory Line</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <img class="img-fluid" src="img/portfolio/yurimaguensis.jpg"alt="">
+            <div class="portfolio-caption">
+              <h4>R. Imitator 'Yurimaguensis'</h4>
+              <p class="text-muted">Tan/Warner Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/banded_imitator.jpg"alt="">
             <div class="portfolio-caption">
               <h4>R. Imitator 'Banded'</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
             <img class="img-fluid" src="img/portfolio/chazuta.jpg"alt="">
             <div class="portfolio-caption">
               <h4>R. Imitator 'Chazuta'</h4>
-              <p class="text-muted">Bloodline</p>
+              <p class="text-muted">Understory Line</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <img class="img-fluid" src="img/portfolio/varadero.jpg"alt="">
+            <div class="portfolio-caption">
+              <h4>R. Imitator 'Varadero'</h4>
+              <p class="text-muted">Understory Line</p>
             </div>
           </div>
         </div>
