--- a/index.html
+++ b/index.html
@@ -254,39 +254,45 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfc-z5c_6vkFtIMZi2bAjSmnMQ2gFDxQIQriv_K-MK3gS0O1g/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+            <form action="https://docs.google.com/forms/d/e/1FAIpQLSfc-z5c_6vkFtIMZi2bAjSmnMQ2gFDxQIQriv_K-MK3gS0O1g/formResponse" target="hidden_iframe" method="POST" id="contactForm" onsubmit="submitted=true;">
               <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input class="form-control" id="entry.957290450" name="entry.957290450" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="entry.1122234000" name="entry.1122234000" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="entry.200306772" name="entry.200306772" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
-                    <p class="help-block text-danger"></p>
-                  </div>
+                <div class="col-md-6" role="list">
+                   <div class="form-group">
+                      <input type="text" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="name" aria-describedby="i.desc.351063301 i.err.351063301" name="entry.957290450" value="" dir="auto" data-initial-dir="auto" placeholder="Your Name *" data-initial-value="" required data-validation-required-message="Please enter your name." />
+                      <p class="help-block text-danger"></p>
+                   </div>
+                   <div class="form-group">
+                      <input type="email" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="email" aria-describedby="i.desc.39454633 i.err.39454633" name="entry.1122234000" value="" dir="auto" data-initial-dir="auto" placeholder="Your Email *" data-initial-value="" required data-validation-required-message="Please enter your email address." />
+                      <p class="help-block text-danger"></p>
+                   </div>
+                   <div class="form-group">
+                      <input type="tel" class="form-control" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-label="phone" aria-describedby="i.desc.1152710320 i.err.1152710320" name="entry.200306772" value="" dir="auto" data-initial-dir="auto" placeholder="Your Phone *" data-initial-value="" required data-validation-required-message="Please enter your phone number." />
+                      <p class="help-block text-danger"></p>
+                   </div>
                 </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <textarea class="form-control" id="entry.1984639159" name="entry.1984639159" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
-                    <p class="help-block text-danger"></p>
-                  </div>
+                <div class="form-group col-md-6">
+                  <div class=""><textarea class="form-control" jsname="YPqjbf" data-rows="1" tabindex="0" aria-label="message" jscontroller="gZjhIf" jsaction="input:Lg5SV;ti6hGc:XMgOHc;rcuQ6b:WYd;" name="entry.1984639159" dir="auto" data-initial-dir="auto" placeholder="Your Message *" data-initial-value="" required data-validation-required-message="Please enter a message."></textarea></div>
+                  <p class="help-block text-danger"></p>
                 </div>
-                <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
-                  <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-                </div>
-                <br>
-                <div class="col-lg-12 text-center" style="display:none; color: white" id="submitted">
-                  <p>
-                    Message Submitted
-                  </p>
-                </div>
+              </div>
+               <div class="clearfix"></div>
+               <div class="col-lg-12 text-center" jscontroller="lSvzH" jsaction="rcuQ6b:npT2md;JIbuQc:Gl574d(QR6bsb),V3upec(GeGHKb),HiUbje(M2UYVd),NPBnCf(OCpkoe);" data-shuffle-seed="3964255351173910577" data-should-execute-invisible-captcha-challenge="false" data-is-receipt-checked="false">
+                <button id="sendMessageButton" role="button" class="btn btn-primary btn-xl text-uppercase" jscontroller="VXdfxd" jsaction="click:cOuCgd; mousedown:UX7yZ; mouseup:lbsD7e; mouseenter:tfO1Yc; mouseleave:JywGue;touchstart:p6p2H; touchmove:FwuNnf; touchend:yfqBxc(preventMouseEvents=true|preventDefault=true); touchcancel:JMtRjd;focus:AHmuwe; blur:O22p3e; contextmenu:mg9Pef;" jsshadow jsname="M2UYVd" aria-disabled="false" tabindex="0" >
+                   <content class=""><span class="">Send Message</span></content>
+                </button>
+               </div>
+               <input type="hidden" name="fvv" value="1"><input type="hidden" name="draftResponse" value="[null,null,&quot;3964255351173910577&quot;]
+                  "><input type="hidden" name="pageHistory" value="0"><input type="hidden" name="fbzx" value="3964255351173910577">
+                <br />
+              <div class="col-lg-12 text-center" id="spacer">
+                <p>
+                  .
+                </p>
+              </div>
+              <div class="col-lg-12 text-center" style="display:none; color: white" id="submitted">
+                <p>
+                  Message Submitted
+                </p>
               </div>
             </form>
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
@@ -337,11 +343,18 @@
     <!-- Contact form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script type="text/javascript">var submitted=false;</script>
+
+
     <script type="text/javascript">
     $('#contactForm').on('submit', function(e) {
-      $('#contactForm')[0].reset();
+      //$('#contactForm')[0].reset();
+      console.log("Form Submitted!");
+      $('#spacer').css('display', 'none');
       $('#submitted').fadeIn(2000);
       $('#submitted').fadeOut(2000);
+      setTimeout(function() {
+        $('#spacer').css('display', 'inline-block');
+      }, 4000);
     });
     </script>
 
